--- a/css/style.css
+++ b/css/style.css
@@ -10,26 +10,71 @@ header {
 h1 {
     position: absolute;
     display: inline;
-    font-family: sans-serif;
     font-size: 1.3cm;
     color: #031931;
-    /* background-color: orange; */
     margin: 0;
     padding: 0.4em 0em 0.4em;
 }
 
 body {
-    margin: 0;
+    font-family: sans-serif;
     background-color: #F6F8F9;
+    margin: 0;
 }
 
 img {
-    /* background-color: red; */
     padding: 1em;
     padding-right: 0.5em;
     width: 4em;
 }
 
 .container {
-    
+    background-color: white;
+    margin: 3em 15% 0em;
+    border-radius: 0.3em;
 }
+
+button {
+    margin: 1em 0.1em 0.5em;
+    padding: 0.4em 0.7em;
+    border-radius: 0.4em;
+    border-color: #F6F8F9;
+    text-decoration: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-style: initial;
+    border: 2px solid #DBDFE1;
+}
+
+#button2:hover {
+    background-color: #47ADF1;
+    border: 2px solid #47ADF1;
+    color: white;
+    /* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); */
+}
+
+#button1 {
+    border: 2px solid #47ADF1;
+    margin-left: 4em;
+    color: white;
+    background-color: #47ADF1;
+}
+
+#button2 {
+    color: #DBDFE1;
+    background-color: white;
+}
+
+.buttonscontainer {
+    padding: 0.3em 0em;
+    border-bottom: 2px solid #F6F8F9;
+}
+
+section:not(.buttonscontainer) {
+    padding: 3em;
+}
+
+ul {
+    list-style-type: none;
+}
+
