--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,6 @@ button {
     text-decoration: none;
     transition-duration: 0.4s;
     cursor: pointer;
-    border-style: initial;
     border: 2px solid #DBDFE1;
 }
 
@@ -50,12 +49,11 @@ button {
     background-color: #47ADF1;
     border: 2px solid #47ADF1;
     color: white;
-    /* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); */
 }
 
 #button1 {
     border: 2px solid #47ADF1;
-    margin-left: 4em;
+    margin-left: 6%;
     color: white;
     background-color: #47ADF1;
 }
@@ -71,10 +69,92 @@ button {
 }
 
 section:not(.buttonscontainer) {
-    padding: 3em;
+    padding: 1.5em 6%;
 }
 
 ul {
-    list-style-type: none;
+    color: #3F434C;
+    list-style-type: "\f0d7";
+    font-family: 'FontAwesome';
+    padding-left: 1em;
+}
+
+li {
+    font-size: 1.3em;
+}
+
+li span {
+    font-size: 0.8em;
+}
+    
+h2 {
+    font-family: sans-serif;
+    padding-left: 0.3em;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    /* height: 2em;
+    width: 2em; */
+    border: 2px solid #eb5c53;
+    border-radius: 2em;
+    padding: 0.3em;
+    cursor: pointer;
+    outline: none;
+    display: inline;
+    align-items: center;
+    justify-content: center;
+}
+
+/* cross */
+input[type="checkbox"]:before {
+    content: "\2717";
+    font-weight: 900;
+    color: #eb5c53;
+    font-size: 1.5em;
+    display: none;
+}
+
+/* check */
+input[type="checkbox"]:after {
+    content: "\2713";
+    font-weight: 900;
+    color: #60BFA7;
+    font-size: 1.5em;
+    display: none;
+}
+
+input[type="checkbox"]:hover {
+    background-color: #DBDFE1;
+}
+
+input[type="checkbox"]:checked {
+    border: 2px solid #60BFA7;
+}
+
+input[type="checkbox"]:checked:after {
+    display: inline;
+}
+
+input[type="checkbox"]:not(:checked):before {
+    display: inline;
+}
+
+label {
+    font-family: sans-serif;
+}
+
+.tag {
+    font-family: sans-serif;
+    font-size: 0.5em;
+    background-color: black;
+    color: white;
+    padding: 0.7em 1em;
+    border-radius: 1em;
+    vertical-align: middle;
+}
+
+#blue {
+    background-color: #45ABEA;
 }
 
