--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ ul {
 
 li {
     font-size: 1.3em;
+    
 }
 
 li span {
@@ -156,5 +157,33 @@ label {
 
 #blue {
     background-color: #45ABEA;
+}
+
+#purple {
+    background-color: #9C72E4;
+}
+
+#teal {
+    background-color: #64C0A9;
+}
+
+#orange {
+    background-color: #F29E33;
+}
+
+#pink {
+    background-color: #D863A1;
+}
+
+#green {
+    background-color: #B0C925;
+}
+
+.item {
+    margin-bottom: 1em;
+}
+
+.item:last-child {
+    margin-bottom: 2.5em;
 }
 
